# dev-tools

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
include/: DeviceDetailsApp.h  DeviceListApp.h
include/flatbuffers/: OTAPacketBuilder.h
include/flatbuffers_generated/: OTAPacket_generated.h  RobotModule_generated.h
include/rpc/: RemoteConfig.h  RemoteDebugging.h  RemoteManagement.h
include/tabs/: ConfigurationTab.h  CoredumpTab.h  FirmwareUpdateTab.h  InformationTab.h  LoggingTab.h  TaskManagerTab.h
src/: DeviceDetailsApp.cpp  DeviceListApp.cpp  main.cpp
src/flatbuffers/: OTAPacketBuilder.cpp
src/rpc/: RemoteConfig.cpp  RemoteDebugging.cpp  RemoteManagement.cpp
src/tabs/: ConfigurationTab.cpp  CoredumpTab.cpp  FirmwareUpdateTab.cpp  InformationTab.cpp  LoggingTab.cpp  TaskManagerTab.cpp
